// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mediaTypes reducer should handle FETCH_MEDIA_TYPES_FAIL 1`] = `
Object {
  "error": [Error],
  "isFetching": false,
}
`;

exports[`mediaTypes reducer should handle FETCH_MEDIA_TYPES_SUCCESS 1`] = `
Object {
  "ids": Array [
    Object {
      "canBeExplicit": true,
      "feed_types": Array [
        Object {
          "translation_key": "topaudiobooks",
          "urlPrefix": "https://itunes.apple.com/<%= country_code %>/rss/topaudiobooks/<%= parameters %>",
          "urlSuffix": "xml",
        },
      ],
      "id": "50000024",
      "store": "music",
      "subgenres": Array [
        Object {
          "id": "",
          "translation_key": "all",
        },
        Object {
          "id": "50000041",
          "translation_key": "arts&entertainment",
        },
      ],
      "translation_key": "audiobooks",
    },
  ],
  "isFetching": false,
}
`;

exports[`mediaTypes reducer should return the initial state 1`] = `
Object {
  "error": null,
  "ids": Array [],
  "isFetching": false,
}
`;
